final link to home

--- a/the_eighth_doctor.html
+++ b/the_eighth_doctor.html
@@ -10,7 +10,7 @@
 		<p><a href=index.html>Return To Home</a></p>
 		<table border="1">
 			<tr>
-				<td><a href="the_eighth_doctor.html"><img src="images/the-eighth-doctor.jpg" width="150" height="150" /></a>
+				<td><a href="index.html"><img src="images/the-eighth-doctor.jpg" width="150" height="150" /></a>
 				</td>
 				<td>
 				<p>The eighth Doctor was portrayed by Paul McGann. McGann portrays the eighth such incarnation, a passionate, enthusiastic and eccentric character. His only companion in the television movie is Grace Holloway (Daphne Ashbrook), a medical doctor whose surgery is responsible for triggering his regeneration.
