--- a/the_eleventh_doctor.html
+++ b/the_eleventh_doctor.html
@@ -11,7 +11,7 @@
 		<p><a href=index.html>Return To Home</a></p>
 		<table border="1">
 			<tr>
-				<td><a href="the_eleventh_doctor.html"><img src="images/the-eleventh-doctor.jpg" width="150" height="150" /></a>
+				<td><a href="index.html"><img src="images/the-eleventh-doctor.jpg" width="150" height="150" /></a>
 				</td>
 				<td>
 				<p>The eleventh Doctor was portrayed by Matt Smith, who was introduced at the conclusion of the show's New Year's Day special in 2010. Smith portrays the eleventh such incarnation, a quick-tempered but compassionate man whose youthful appearance is at odds with his more discerning and world-weary temperament.</p>
