--- a/the_fifth_doctor.html
+++ b/the_fifth_doctor.html
@@ -10,7 +10,7 @@
 		<p><a href=index.html>Return To Home</a></p>
 		<table border="1">
 			<tr>
-				<td><a href="the_fifth_doctor.html"><img src="images/the-fifth-doctor.jpg" width="150" height="150" /></a>
+				<td><a href="index.html"><img src="images/the-fifth-doctor.jpg" width="150" height="150" /></a>
 				</td>
 				<td>
 				<p>Peter Davison was chosen due to his critically acclaimed role as Tristan Farnon in the BBC series. The shows producers wanted an actor who presented a physical contrast to the fourth Doctor, Baker. All Creatures Great and Small which had Doctor Who producer John Nathan-Turner as line producer.</p>
