--- a/the_fourth_doctor.html
+++ b/the_fourth_doctor.html
@@ -10,7 +10,7 @@
 		<p><a href=index.html>Return To Home</a></p>
 		<table border="1">
 			<tr>
-				<td><a href="the_fourth_doctor.html"><img src="images/the-fourth-doctor.jpg" width="150" height="150" /></a>
+				<td><a href="index.html"><img src="images/the-fourth-doctor.jpg" width="150" height="150" /></a>
 				</td>
 				<td><p>The fourth Doctor was portrayed by Tom Baker for seven consecutive seasons from December 28, 1974 (Part One of Robot) to March 21, 1981 (Part 4 of Logopolis), and remains the longest-lived incarnation of the Doctor in the show's on-screen history, counting both the classic and modern series.</p>
 				<p>The Fourth Doctor appeared in 172 episodes (179, counting the regeneration in Planet of the Spiders and the aborted Shada) over a seven-year period, from 1974 to 1981. This makes him the longest running on-screen Doctor of both series. He also appeared in the specials The Five Doctors (via footage from the incomplete Shada) and made his final appearance as the Doctor in the charity special Dimensions in Time (aside from a series of television advertisements in New Zealand in 1997).</p>
