--- a/the_ninth_doctor.html
+++ b/the_ninth_doctor.html
@@ -11,7 +11,7 @@
 		<p><a href=index.html>Return To Home</a></p>
 		<table border="1">
 			<tr>
-				<td><a href="the_ninth_doctor.html"><img src="images/the-ninth-doctor.jpg" width="150" height="150" /></a>
+				<td><a href="index.html"><img src="images/the-ninth-doctor.jpg" width="150" height="150" /></a>
 				</td>
 				<td>
 				<p>The ninth Doctor was portrayed by Christopher Eccleston. The production team's approach to the character and Eccleston's portrayal were highlighted as being intentionally different from his predecessors, with Eccleston stating that his character would be less eccentric.</p>
