--- a/the_seventh_doctor.html
+++ b/the_seventh_doctor.html
@@ -10,7 +10,7 @@
 		<p><a href=index.html>Return To Home</a></p>
 		<table border="1">
 			<tr>
-				<td><a href="the_seventh_doctor.html"><img src="images/the-seventh-doctor.jpg" width="150" height="150" /></a>
+				<td><a href="index.html"><img src="images/the-seventh-doctor.jpg" width="150" height="150" /></a>
 				</td>
 				<td>
 				<p>The seventh Doctor was portrayed by Sylvester McCoy. When the Doctor is critically injured, he can regenerate his body; in doing so, his physical appearance and personality change. McCoy portrays the seventh such incarnation, a whimsical, thoughtful character who quickly becomes more layered, secretive and manipulative.</p>
