--- a/the_tenth_doctor.html
+++ b/the_tenth_doctor.html
@@ -10,7 +10,7 @@
 		<p><a href=index.html>Return To Home</a></p>
 		<table border="1">
 			<tr>
-				<td><a href="the_tenth_doctor.html"><img src="images/the-tenth-doctor.jpg" width="150" height="150" /></a>
+				<td><a href="index.html"><img src="images/the-tenth-doctor.jpg" width="150" height="150" /></a>
 				</td>
 				<td>
 				<p>The tenth Doctor was portrayed by David Tennant, a Scottish actor (born David John McDonald). Doctor Who returned to British screens in 2005, with Christopher Eccleston playing the role of the Ninth Doctor in the first series.</p>
