--- a/the_second_doctor.html
+++ b/the_second_doctor.html
@@ -11,7 +11,7 @@
 		<p><a href=index.html>Return To Home</a></p>
 		<table border="1">
 			<tr>
-				<td><a href="the_second_doctor.html"><img src="images/the-second-doctor.jpg" width="150" height="150" /></a>
+				<td><a href="index.html"><img src="images/the-second-doctor.jpg" width="150" height="150" /></a>
 				</td>
 				<td><p>The Second Doctor is the second incarnation of the protagonist of the long-running BBC television science fiction series Doctor Who. He was portrayed by character actor Patrick Troughton.</p>
 				<p>Within the series' narrative, the Doctor is a centuries-old Time Lord alien from the planet Gallifrey who travels in time and space in his TARDIS, frequently with companions. When the Doctor is critically injured, he can regenerate his body; in doing so, his physical appearance and personality change.
