--- a/the_sixth_doctor.html
+++ b/the_sixth_doctor.html
@@ -10,7 +10,7 @@
 		<p><a href=index.html>Return To Home</a></p>
 		<table border="1">
 			<tr>
-				<td><a href="the_sixth_doctor.html"><img src="images/the-sixth-doctor.jpg" width="150" height="150" /></a>
+				<td><a href="index.html"><img src="images/the-sixth-doctor.jpg" width="150" height="150" /></a>
 				</td>
 				<td>
 				<p>The sixth Doctor was portrayed by actor Colin Baker. The Sixth Doctor's brightly coloured, mismatched clothes and brash, overbearing personality set him apart from all his previous incarnations, in some ways hearkening back to the early irascibility and initial undertones of untrustworthiness of the First Doctor.</p>
