--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 	<head>
-		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-		<title>Dr. Who</title>
+		<link rel="stylesheet" href="style.css">
+		<title class="blue">Dr. Who</title>
 	</head>
-	<body BACKGROUND="images/back5.jpg">
+	<body class="blue">
 		<h1>Dr. Who</h1>
-		<p>Welcome to my Dr. Who website. Doctor Who is a British science fiction television programme produced by the BBC. The programme depicts the adventures of a Time Lord—a time travelling, humanoid alien known as the Doctor. He explores the universe in his 'TARDIS', a sentient, telepathic time-and-space-travel machine that flies through the time vortex.</p>
-		<p>Up to date, there are Eleven actors that have portrayed the Doctor. I'd like to introduce you to the Doctors.</p>
-		<table border="4">
+		<p>Welcome to my Dr. Who website. Doctor Who is a British science fiction television program produced by the BBC. The program depicts the adventures of a Time Lord time travelling, humanoid alien known as the Doctor. He explores the universe in his 'TARDIS', a sentient, telepathic time-and-space-travel machine that flies through the time vortex.
+		Within the series' narrative, when the centuries-old Time Lord alien is critically injured, he can regenerate his body-- in doing so, his physical appearance and personality change.</p>
+		<p>Up to date, eleven actors have portrayed this time travelling Doctor. I would like to introduce you to the Doctors.</p>
+		<table class="one">
 			<tr>
 				<td><a href="the_first_doctor.html"><img src="images/the-first-doctor.jpg" width="150" height="150" /></a>
 				</td>
