--- a/the_eighth_doctor.html
+++ b/the_eighth_doctor.html
@@ -1,23 +1,26 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 	<head>
-		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-		<title>The Eighth Doctor</title>
+		<link rel="stylesheet" href="style.css">
+		<title class="green">The Eighth Doctor</title>
 	</head>
-	<body BACKGROUND="images/back4.jpg">
-		<h1>The Eighth Doctor</h1>
-		<p>Portrayed by Paul McGann</p>
-		<p><a href=index.html>Return To Home</a></p>
-		<table border="1">
+	<body class="green">
+		<h1 class="green">The Eighth Doctor</h1>
+		<h2>Portrayed by Paul McGann</h2> 
+		<table border="2">
 			<tr>
-				<td><a href="index.html"><img src="images/the-eighth-doctor.jpg" width="150" height="150" /></a>
+				<td><a href="index.html"><img src="images/the-eighth-doctor2.jpg" width="200" height="200" /></a>
 				</td>
 				<td>
-				<p>The eighth Doctor was portrayed by Paul McGann. McGann portrays the eighth such incarnation, a passionate, enthusiastic and eccentric character. His only companion in the television movie is Grace Holloway (Daphne Ashbrook), a medical doctor whose surgery is responsible for triggering his regeneration.
-				</p>
-				<p> The Eighth Doctor made his first television appearance in the 1996 Doctor Who television movie, the first time the Doctor had returned to television screens since the end of the original series in 1989. Intended as a backdoor pilot for a new television series on the Fox Network, the movie managed to draw 5% of the US audience, according to Nielsen Ratings. In the United Kingdom, it was received well, attracting over 9 million viewers and generally positive reviews. It was also generally well received in Australia.</p>
+				<p>The eighth Doctor was portrayed by Paul McGann. McGann portrays the eighth such incarnation, a passionate, enthusiastic and eccentric character. His only companion in the television movie is Grace Holloway (Daphne Ashbrook), a medical doctor whose surgery is responsible for triggering his regeneration.</p>
+				<p> The Eighth Doctor made his first television appearance in the 1996 Doctor Who television movie, the first television return since 1989. The movie attracted over 9 million viewers in the United Kingdon and somehow managed to draw over 5% of the US audience, according to Nielsen Ratings. In the United Kingdom it received generally positive reviews. It was also generally well received in Australia.</p>
 				</td>
 			</tr>	
 		</table>
+		<br></br>
+		<br></br>
+		<br></br>
+		<br></br>
+		<p class="footer"><a href=index.html>Return To Home</a></p>
 	</body>
 </html>
