--- a/the_eleventh_doctor.html
+++ b/the_eleventh_doctor.html
@@ -1,17 +1,15 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 	<head>
-		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-		<title>The First Doctor</title>
+		<link rel="stylesheet" href="style.css">
+		<title class="green">The Eleventh Doctor</title>
 	</head>
-
-	<body BACKGROUND="images/back4.jpg">
-		<h1>The Eleventh Doctor</h1>
-		<p>Portrayed by Matt Smith</p>
-		<p><a href=index.html>Return To Home</a></p>
-		<table border="1">
+	<body class="green">
+		<h1 class="green">The Eleventh Doctor</h1>
+		<h2>Portrayed by Matt Smith</h2>
+		<table border="2">
 			<tr>
-				<td><a href="index.html"><img src="images/the-eleventh-doctor.jpg" width="150" height="150" /></a>
+				<td><a href="index.html"><img src="images/the-eleventh-doctor2.jpg" width="200" height="200" /></a>
 				</td>
 				<td>
 				<p>The eleventh Doctor was portrayed by Matt Smith, who was introduced at the conclusion of the show's New Year's Day special in 2010. Smith portrays the eleventh such incarnation, a quick-tempered but compassionate man whose youthful appearance is at odds with his more discerning and world-weary temperament.</p>
@@ -19,5 +17,10 @@
 				</td>
 			</tr>	
 		</table>
+		<br></br>
+		<br></br>
+		<br></br>
+		<br></br>
+		<p class="footer"><a href=index.html>Return To Home</a></p>
 	</body>
 </html>
