--- a/the_ninth_doctor.html
+++ b/the_ninth_doctor.html
@@ -1,17 +1,15 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 	<head>
-		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-		<title>The First Doctor</title>
+		<link rel="stylesheet" href="style.css">
+		<title class="yellow">The Ninth Doctor</title>
 	</head>
-
-	<body BACKGROUND="images/back1.jpg">
-		<h1>The Ninth Doctor</h1>
-		<p>Portrayed by Christopher Eccleston</p>
-		<p><a href=index.html>Return To Home</a></p>
-		<table border="1">
+	<body class="yellow">
+		<h1 class="yellow">The Ninth Doctor</h1>
+		<h2>Portrayed by Christopher Eccleston</h2>
+		<table border="2">
 			<tr>
-				<td><a href="index.html"><img src="images/the-ninth-doctor.jpg" width="150" height="150" /></a>
+				<td><a href="index.html"><img src="images/the-ninth-doctor2.jpg" width="200" height="200" /></a>
 				</td>
 				<td>
 				<p>The ninth Doctor was portrayed by Christopher Eccleston. The production team's approach to the character and Eccleston's portrayal were highlighted as being intentionally different from his predecessors, with Eccleston stating that his character would be less eccentric.</p>
@@ -19,6 +17,10 @@
 				</td>
 			</tr>	
 		</table>
+		<br></br>
+		<br></br>
+		<br></br>
+		<br></br>
+		<p class="footer"><a href=index.html>Return To Home</a></p>
 	</body>
-
 </html>
