--- a/the_seventh_doctor.html
+++ b/the_seventh_doctor.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 	<head>
-		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-		<title>The Seventh Doctor</title>
+		<link rel="stylesheet" href="style.css">
+		<title class="purple">The Seventh Doctor</title>
 	</head>
-	<body BACKGROUND="images/back3.jpg">
-		<h1>The Seventh Doctor</h1>
-		<p>Portrayed by Sylvester McCoy</p>
-		<p><a href=index.html>Return To Home</a></p>
-		<table border="1">
+	<body class="purple">
+		<h1 class="purple">The Seventh Doctor</h1>
+		<h2>Portrayed by Sylvester McCoy</h2>
+		<table border="2">
 			<tr>
-				<td><a href="index.html"><img src="images/the-seventh-doctor.jpg" width="150" height="150" /></a>
+				<td><a href="index.html"><img src="images/the-seventh-doctor2.jpg" width="200" height="200" /></a>
 				</td>
 				<td>
 				<p>The seventh Doctor was portrayed by Sylvester McCoy. When the Doctor is critically injured, he can regenerate his body; in doing so, his physical appearance and personality change. McCoy portrays the seventh such incarnation, a whimsical, thoughtful character who quickly becomes more layered, secretive and manipulative.</p>
@@ -18,5 +17,10 @@
 				</td>
 			</tr>	
 		</table>
+		<br></br>
+		<br></br>
+		<br></br>
+		<br></br>
+		<p class="footer"><a href=index.html>Return To Home</a></p>
 	</body>
 </html>
