--- a/the_tenth_doctor.html
+++ b/the_tenth_doctor.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 	<head>
-		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-		<title>The Tenth Doctor</title>
+		<link rel="stylesheet" href="style.css">
+		<title class="pink">The Tenth Doctor</title>
 	</head>
-	<body BACKGROUND="images/back2.jpg">
-		<h1>The Tenth Doctor</h1>
-		<p>Portrayed by David Tennant</p>
-		<p><a href=index.html>Return To Home</a></p>
-		<table border="1">
+	<body class="pink">
+		<h1 class="pink">The Tenth Doctor</h1>
+		<h2>Portrayed by David Tennant</h2>
+		<table border="2">
 			<tr>
-				<td><a href="index.html"><img src="images/the-tenth-doctor.jpg" width="150" height="150" /></a>
+				<td><a href="index.html"><img src="images/the-tenth-doctor2.jpg" width="200" height="200" /></a>
 				</td>
 				<td>
 				<p>The tenth Doctor was portrayed by David Tennant, a Scottish actor (born David John McDonald). Doctor Who returned to British screens in 2005, with Christopher Eccleston playing the role of the Ninth Doctor in the first series.</p>
@@ -18,5 +17,10 @@
 				</td>
 			</tr>	
 		</table>
+		<br></br>
+		<br></br>
+		<br></br>
+		<br></br>
+		<p class="footer"><a href=index.html>Return To Home</a></p>
 	</body>
 </html>
