--- a/the_fourth_doctor.html
+++ b/the_fourth_doctor.html
@@ -1,21 +1,25 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 	<head>
-		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-		<title>The Fourth Doctor</title>
+		<link rel="stylesheet" href="style.css">
+		<title class="green">The Fourth Doctor</title>
 	</head>
-	<body BACKGROUND="images/back4.jpg">
-			<h1>The Fourth Doctor</h1>
-		<p>The fourth Doctor is portrayed by actor Tom Baker</p>
-		<p><a href=index.html>Return To Home</a></p>
-		<table border="1">
+	<body class="green">
+		<h1 class="green">The Fourth Doctor</h1>
+		<h2>Portrayed by Tom Baker</h2>
+		<table border="2">
 			<tr>
-				<td><a href="index.html"><img src="images/the-fourth-doctor.jpg" width="150" height="150" /></a>
+				<td><a href="index.html"><img src="images/the-fourth-doctor2.jpg" width="200" height="200" /></a>
 				</td>
-				<td><p>The fourth Doctor was portrayed by Tom Baker for seven consecutive seasons from December 28, 1974 (Part One of Robot) to March 21, 1981 (Part 4 of Logopolis), and remains the longest-lived incarnation of the Doctor in the show's on-screen history, counting both the classic and modern series.</p>
-				<p>The Fourth Doctor appeared in 172 episodes (179, counting the regeneration in Planet of the Spiders and the aborted Shada) over a seven-year period, from 1974 to 1981. This makes him the longest running on-screen Doctor of both series. He also appeared in the specials The Five Doctors (via footage from the incomplete Shada) and made his final appearance as the Doctor in the charity special Dimensions in Time (aside from a series of television advertisements in New Zealand in 1997).</p>
+				<td><p>The fourth Doctor was portrayed by Tom Baker for seven consecutive seasons from December 28, 1974 to March 21, 1981. Baker remains the longest-lived incarnation of the Doctor in the show's on-screen history, counting both the classic and modern series.</p>
+				<p>This longest running on-screen Doctor appeared in 172 episodes over a seven-year period. He also appeared in the specials "The Five Doctors" and made his final television appearance in the UK in the charity special "Dimensions in Time". Baker made his final appearance in 1997 television advertisements in New Zealand.</p>
 				</td>
 			</tr>		
 		</table>
+		<br></br>
+		<br></br>
+		<br></br>
+		<br></br>
+		<p class="footer"><a href=index.html>Return To Home</a></p>
 	</body>
 </html>
