--- a/the_second_doctor.html
+++ b/the_second_doctor.html
@@ -1,22 +1,25 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 	<head>
-		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-		<title>The Second Doctor</title>
+		<link rel="stylesheet" href="style.css">
+		<title class="pink">The Second Doctor</title>
 	</head>
-
-	<body BACKGROUND="images/back2.jpg">
-		<h1>The Second Doctor</h1>
-		<p>The second doctor is portrayed by actor Patrick Troughton</p>
-		<p><a href=index.html>Return To Home</a></p>
-		<table border="1">
+	<body class="pink">
+		<h1 class="pink">The Second Doctor</h1>
+		<h2>Portrayed by Patrick Troughton</h2>
+		<table border="2">
 			<tr>
-				<td><a href="index.html"><img src="images/the-second-doctor.jpg" width="150" height="150" /></a>
+				<td><a href="index.html"><img src="images/the-second-doctor2.jpg" width="200" height="200" /></a>
 				</td>
 				<td><p>The Second Doctor is the second incarnation of the protagonist of the long-running BBC television science fiction series Doctor Who. He was portrayed by character actor Patrick Troughton.</p>
-				<p>Within the series' narrative, the Doctor is a centuries-old Time Lord alien from the planet Gallifrey who travels in time and space in his TARDIS, frequently with companions. When the Doctor is critically injured, he can regenerate his body; in doing so, his physical appearance and personality change.
-				The transformation into the Second Doctor (originally referred to as a "renewal"), a figure who was the same 'essential' character as the first but with a very different persona, was a turning point in the evolution of the series, which eventually became a critical element of the series' longevity.</p></td>
+				<p> The transformation into the Second Doctor, originally referred to as a "renewal", was a turning point in the evolution of the series. The renewal and transformation process eventually became a critical element of the series' longevity.The second Doctor was the same 'essential' character as the first but he had a very different persona.</p>
+				</td>
 			</tr>	
 		</table>
+		<br></br>
+		<br></br>
+		<br></br>
+		<br></br>
+		<p class="footer"><a href=index.html>Return To Home</a></p>
 	</body>
 </html>
