--- a/the_third_doctor.html
+++ b/the_third_doctor.html
@@ -1,22 +1,26 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 	<head>
-		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-		<title>The Third Doctor</title>
+		<link rel="stylesheet" href="style.css">
+		<title class="purple">The Third Doctor</title>
 	</head>
-	<body BACKGROUND="images/back3.jpg">
-		<h1>The Third Doctor</h1>
-		<p>The third Doctor is portrayed by actor Jon Pertwee</p>
-		<p><a href=index.html>Return To Home</a></p>
-		<table border="1">
+	<body class="purple">
+		<h1 class="purple">The Third Doctor</h1>
+		<h2>Portrayed by Jon Pertwee</h2> 
+		<table border="2">
 			<tr>
 				<td>
-				<a href="index.html"><img src="images/the-third-doctor.jpg" width="150" height="150" /></a>
+				<a href="index.html"><img src="images/the-third-doctor2.jpg" width="200" height="200" /></a>
 				</td>
 				<td><p>The Third Doctor is the third incarnation of the protagonist of the long-running BBC television science fiction series Doctor Who. He was portrayed by actor Jon Pertwee.</p>
 				<p>The Third Doctor was a suave, dapper, technologically oriented, and authoritative man of action who not only practised Venusian Aikido (or Karate) but enjoyed working on gadgets and riding all manner of vehicles, such as the Whomobile and his pride and joy, the canary-yellow vintage roadster nicknamed "Bessie," a construct which featured such modifications as a remote control, dramatically increased speed capabilities, and inertial dampeners. The First Doctor, upon meeting the Third, described him indignantly as a "dandy".</p>
 				</td>
 			</tr>	
 		</table>
+		<br></br>
+		<br></br>
+		<br></br>
+		<br></br>
+		<p class="footer"><a href=index.html>Return To Home</a></p>
 	</body>
 </html>
