--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 	<head>
-		<link rel="stylesheet" href="style.css">
-		<title class="blue">Dr. Who</title>
+	<link rel="stylesheet" href="style.css">
+	<title class="blue">Dr. Who</title>
 	</head>
 	<body class="blue">
 		<h1>Dr. Who</h1>
 		<p>Welcome to my Dr. Who website. Doctor Who is a British science fiction television program produced by the BBC. The program depicts the adventures of a Time Lord time travelling, humanoid alien known as the Doctor. He explores the universe in his 'TARDIS', a sentient, telepathic time-and-space-travel machine that flies through the time vortex.
-		Within the series' narrative, when the centuries-old Time Lord alien is critically injured, he can regenerate his body-- in doing so, his physical appearance and personality change.</p>
+		Within the series' narrative, when the centuries-old Time Lord alien is critically injured, he can regenerate his body-in doing so, his physical appearance and personality change.</p>
 		<p>Up to date, eleven actors have portrayed this time travelling Doctor. I would like to introduce you to the Doctors.</p>
 		<table class="one">
 			<tr>
