--- a/the_fifth_doctor.html
+++ b/the_fifth_doctor.html
@@ -1,26 +1,22 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 	<head>
-		<link rel="stylesheet" href="style.css">
-		<title class="yellow">The Fifth Doctor</title>
+	<link rel="stylesheet" href="style.css">
+	<title class="yellow">The Fifth Doctor</title>
 	</head>
 	<body class="yellow">
 		<h1 class="yellow">The Fifth Doctor</h1>
 		<h2>Portrayed by Peter Davison</h2>
+		<p class="footer"><a href=index.html>Return To Home</a></p>
 		<table border="2">
 			<tr>
 				<td><a href="index.html"><img src="images/the-fifth-doctor2.jpg" width="200" height="200" /></a>
 				</td>
 				<td>
-				<p>Peter Davison was chosen due to his critically acclaimed role as Tristan Farnon in the BBC series. The shows producers wanted an actor who presented a physical contrast to the fourth Doctor, Baker. All Creatures Great and Small which had Doctor Who producer John Nathan-Turner as line producer.</p>
-				<p>The Fifth Doctor's era was notable for a "back to the basics" attitude, in which "silly" humour (and, to an extent, horror) was kept to a minimum, and more scientific accuracy was encouraged by the producer, John Nathan-Turner. It was, at times, a darker and grittier series, in part for seeing the death of one of his companions, Adric. It was also notable for the reintroduction of many of the Time Lord's enemies, such as the Master, Cybermen, Omega, the Black and White Guardians, and the Silurians.</p>
+				<p>Peter Davison was chosen as the Fifth Doctor due to his critically acclaimed role as Tristan Farnon in the BBC series. The shows producers wanted an actor who presented a physical contrast to the Fourth Doctor.</p>
+				<p>The Fifth Doctor's era was notable for a "back to the basics" attitude, in which "silly" humour and horror was kept to a minimum, and more scientific accuracy was encouraged by the show's producer, John Nathan-Turner. It was, at times, a darker and grittier series, in part for seeing the death of one of his companions, Adric. It was also notable for the reintroduction of many of the Time Lord's enemies, such as the Master, Cybermen, Omega, the Black and White Guardians, and the Silurians.</p>
 				</td>
 			</tr>
 		</table>
-		<br></br>
-		<br></br>
-		<br></br>
-		<br></br>
-		<p class="footer"><a href=index.html>Return To Home</a></p>
 	</body>
 </html>
