--- a/the_ninth_doctor.html
+++ b/the_ninth_doctor.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 	<head>
-		<link rel="stylesheet" href="style.css">
-		<title class="yellow">The Ninth Doctor</title>
+	<link rel="stylesheet" href="style.css">
+	<title class="yellow">The Ninth Doctor</title>
 	</head>
 	<body class="yellow">
 		<h1 class="yellow">The Ninth Doctor</h1>
@@ -13,14 +13,9 @@
 				</td>
 				<td>
 				<p>The ninth Doctor was portrayed by Christopher Eccleston. The production team's approach to the character and Eccleston's portrayal were highlighted as being intentionally different from his predecessors, with Eccleston stating that his character would be less eccentric.</p>
-				<p>To fit in with a 21st century audience, the Doctor was given a primary companion who was designed to be as independent and courageous as himself in the form of Rose Tyler. He also briefly travels with Adam Mitchell, a self-serving boy genius who acts as a foil to the companions and ultimately proves unworthy, and Jack Harkness, a reformed con-man. The Doctor, Rose, and Jack form a close team but are separated in the series finale in which each character has to make difficult choices and face sacrifice.</p>
+				<p>To fit in with a 21st century audience, the Doctor was given a primary companion who was designed to be as independent and courageous as himself in the form of Rose Tyler. He also briefly travels with Adam Mitchell, a self-serving boy genius who acts as a foil to the companions and ultimately proves unworthy, and Jack Harkness, a reformed con-man.</p>
 				</td>
 			</tr>	
 		</table>
-		<br></br>
-		<br></br>
-		<br></br>
-		<br></br>
-		<p class="footer"><a href=index.html>Return To Home</a></p>
 	</body>
 </html>
