--- a/the_tenth_doctor.html
+++ b/the_tenth_doctor.html
@@ -1,26 +1,22 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 	<head>
-		<link rel="stylesheet" href="style.css">
-		<title class="pink">The Tenth Doctor</title>
+	<link rel="stylesheet" href="style.css">
+	<title class="pink">The Tenth Doctor</title>
 	</head>
 	<body class="pink">
 		<h1 class="pink">The Tenth Doctor</h1>
 		<h2>Portrayed by David Tennant</h2>
+		<p class="footer"><a href=index.html>Return To Home</a></p>
 		<table border="2">
 			<tr>
 				<td><a href="index.html"><img src="images/the-tenth-doctor2.jpg" width="200" height="200" /></a>
 				</td>
 				<td>
-				<p>The tenth Doctor was portrayed by David Tennant, a Scottish actor (born David John McDonald). Doctor Who returned to British screens in 2005, with Christopher Eccleston playing the role of the Ninth Doctor in the first series.</p>
-				<p>Tennant replaced him as of the second series, making his first, brief appearance as the Tenth Doctor in the episode "The Parting of the Ways" (2005) at the end of the regeneration scene, and also appeared in a special 7-minute mini-episode shown as part of the 2005 Children in Need appeal, broadcast on 18 November 2005. He began filming the new series of Doctor Who in late July 2005. His first full-length outing as the Doctor was a 60-minute special, "The Christmas Invasion", first broadcast on Christmas Day 2005</p>
+				<p>The tenth Doctor was portrayed by David Tennant, a Scottish actor (born David John McDonald). Doctor Who returned to British screens in 2005, as Christopher Eccleston played the role of the Ninth Doctor in that  series.</p>
+				<p>Tennant replaced Eccleston as of the second series, making his first, brief appearance as the Tenth Doctor in the episode "The Parting of the Ways" (2005). He began filming the new series of Doctor Who in late July 2005. His first full-length outing as the Doctor was a 60-minute special, "The Christmas Invasion", first broadcast on Christmas Day 2005.</p>
 				</td>
 			</tr>	
 		</table>
-		<br></br>
-		<br></br>
-		<br></br>
-		<br></br>
-		<p class="footer"><a href=index.html>Return To Home</a></p>
 	</body>
 </html>
