--- a/the_sixth_doctor.html
+++ b/the_sixth_doctor.html
@@ -1,26 +1,22 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 	<head>
-		<link rel="stylesheet" href="style.css">
-		<title class="pink">The Sixth Doctor</title>
+	<link rel="stylesheet" href="style.css">
+	<title class="pink">The Sixth Doctor</title>
 	</head>
 	<body class="pink">
 		<h1 class="pink">The Sixth Doctor</h1>
 		<h2>Portrayed by Colin Baker</h2>
+		<p class="footer"><a href=index.html>Return To Home</a></p>
 		<table border="2">
 			<tr>
 				<td><a href="index.html"><img src="images/the-sixth-doctor2.jpg" width="200" height="200" /></a>
 				</td>
 				<td>
-				<p>The sixth Doctor was portrayed by actor Colin Baker. The Sixth Doctor's brightly coloured, mismatched clothes and brash, overbearing personality set him apart from all his previous incarnations, in some ways hearkening back to the early irascibility and initial undertones of untrustworthiness of the First Doctor.</p>
-				<p>The Sixth Doctor appeared in three seasons. His first appearance was at the end of the final episode of The Caves of Androzani, which featured regeneration of the fifth Doctor. The Sixth Doctor's era was marked by the decision of the BBC controller Michael Grade to put the series on an 18-month "hiatus" between seasons 22 and 23, with only one new Doctor Who story, Slipback.</p>
+				<p>The Sixth Doctor was portrayed by actor Colin Baker. The Sixth Doctor's brightly coloured, mismatched clothes and brash, overbearing personality set him apart from all his previous incarnations. In some ways he was hearkening back to the initial undertones of untrustworthiness of the First Doctor.</p>
+				<p>The Sixth Doctor appeared in three seasons. His first appearance was at the end of the final episode of The Caves of Androzani, which featured a regeneration of the Fifth Doctor. The Sixth Doctor's era was marked by the decision of the BBC controller Michael Grade to put the series on an 18-month "hiatus" between seasons 22 and 23. </p>
 				</td>
 			</tr>
 		</table>
-		<br></br>
-		<br></br>
-		<br></br>
-		<br></br>
-		<p class="footer"><a href=index.html>Return To Home</a></p>
 	</body>
 </html>
